--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 services:
-  nginx:
+  nginx-uniquiz:
     image: nginx:1.15
-    container_name: nginx
+    container_name: nginx-uniqiuz
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
@@ -10,23 +10,23 @@ services:
     networks:
       - bridge
     depends_on:
-      - react-app
-  react-app:
+      - react-app-uniquiz
+  react-app-uniquiz:
     build:
       context: ./react_app
       dockerfile: ./Dockerfile
     volumes:
       - ./react_app/src:/user/src/react_app/src
-    container_name: react-app
+    container_name: react-app-uniquiz
     networks:
       bridge:
         aliases:
           - react-app
-  flask-auth:
+  flask-uniquiz:
     build:
       context: ./flask_api
       dockerfile: Dockerfile
-    container_name: flask-auth
+    container_name: flask-uniquiz
     environment:
       FLASK_APP: "/var/www/flask_api/create_app.py"
       FLASK_ENV: "development"
@@ -36,11 +36,7 @@ services:
       bridge:
         aliases:
           - flask-app
-  mongo-auth:
-    image: mongo
-    networks:
-      - bridge
-  mongo-resource:
+  mongo-uniquiz:
     image: mongo
     networks:
       - bridge
