--- a/default.conf
+++ b/default.conf
@@ -2,8 +2,8 @@ upstream react-app {
     server react-app:3000;
 }
 
-upstream flask-app{
-    server flask-app:5001;
+upstream django-app{
+    server django-app:5001;
 }
 
 server {
@@ -17,7 +17,7 @@ server {
         proxy_redirect off;
     }
     location /api {
-        proxy_pass http://flask-app;
+        proxy_pass http://django-app;
         proxy_set_header Host "localhost";
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
